# Pheonix-prime

./: .gitignore  AGENTS_IMPLEMENTATION_PLAN.md  AI_AGENTS.md  AI_AGENTS_TECH.md  AI_RESPONSE_STREAMING_FIX_DOCUMENTATION.md  AI_STREAMING_FIXES_IMPLEMENTATION_REPORT.md  Apple_MessageInput.tsx  CRITICAL_FIX_LOCAL_DEVELOPMENT.md  DEEP_THINKING_COMPLETE_IMPLEMENTATION_GUIDE.md  DEEP_THINKING_FIX_SUMMARY.md  DEEP_THINKING_INTEGRATION_STRATEGIC_PLAN.md  DEEP_THINKING_PART2_IMPLEMENTATION.md  DEEP_THINKING_TESTING_FIXES_DOCUMENTATION.md  DEEP_THINKING_TEST_REPORT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.md  DOCKER_BEGINNER_GUIDE.md  DOCKER_IMPLEMENTATION_COMPLETE.md  DOCKER_QUICKSTART.md  DOCKER_QUICK_REFERENCE.md  DOCKER_SETUP_DOCUMENTATION.md  DOCKER_TESTING_COMPREHENSIVE_REPORT.md  DOCKER_VISUAL_SETUP_GUIDE.md  Emergent compatibility fix.md  FIX_SUMMARY_LOCAL_REGISTRATION.md  GEMINI_3_PRO_DEEP_THINK_INTEGRATION_ANALYSIS.md  GEMINI_3_PRO_INTEGRATION_STRATEGIC_ANALYSIS.md  LICENSE  LIVE_TEST_RESULTS.md  LOCAL_DEVELOPMENT_FIX_DOCUMENTATION.md  LOCAL_DEVELOPMENT_SETUP.md  LOCAL_DEVELOPMENT_SETUP_GUIDE.md  Local_development_fixes_applied.md  MASTERX_PROJECT_AUDIT.md  PROJECT_REALITY_AUDIT.md  QUICK_START_LOCAL_DEV.md  README.md  STREAMING_INTEGRATION_COMPLETE.md  SUGGESTED_QUESTIONS_FIX_DETAILED.md  UV_MIGRATION_GUIDE.md  (+13 more)
backend/: .dockerignore  .env  DEPENDENCIES.md  Dockerfile  pyproject.toml  requirements.txt  server.py
backend/config/: settings.py
backend/core/: ai_providers.py  context_manager.py  engine.py  models.py
backend/middleware/: simple_rate_limit.py
backend/services/: ml_question_generator.py  vector_store.py  websocket_service.py
backend/tests/: test_deep_thinking_advanced.py  test_deep_thinking_comprehensive.py  test_vector_store_integration.py  (+1 more)
(+43 files in other folders)
