[project]
name = "masterx-backend"
version = "1.0.0"
description = "MasterX - AI-Powered Adaptive Learning Platform Backend"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.25.0",
    "starlette>=0.37.0",
    "python-multipart>=0.0.20",
    
    # Database
    "motor>=3.3.0",
    "pymongo>=4.5.0",
    
    # Data Validation & Settings
    "pydantic>=2.11.0",
    "pydantic-settings>=2.11.0",
    
    # Authentication & Security
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.1.0",
    
    # AI Providers
    "openai>=1.99.0",
    "anthropic>=0.30.0",
    "google-generativeai>=0.8.0",
    "groq>=0.31.0",
    "litellm>=1.77.0",
    
    # ML/AI Libraries
    "torch>=2.8.0",
    "transformers>=4.56.0",
    "sentence-transformers>=5.1.0",
    "scikit-learn>=1.7.0",
    "numpy>=2.3.0",
    "scipy>=1.16.0",
    
    # ONNX Runtime (optimized inference)
    "onnx>=1.17.0",
    "onnxruntime>=1.20.0",
    
    # Voice/Audio
    "elevenlabs>=2.16.0",
    "webrtcvad>=2.0.10",
    
    # HTTP Clients
    "aiohttp>=3.12.0",
    "requests>=2.32.0",
    "httpx>=0.28.0",
    
    # WebSocket
    "websockets>=15.0.0",
    
    # Monitoring & Observability
    "psutil>=7.1.0",
    "prometheus-client>=0.23.0",
    "coloredlogs>=15.0.0",
    
    # Token Counting
    "tiktoken>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# UV-specific configuration
dev-dependencies = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.2.0",
]
